--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,27 @@
     margin: 0;
     padding: 0;
     font-family: 'Century Gothic', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #bdb9cb;
-    
+    color: #bdb9cb;   
 }
 
 body{
-    margin: 0rem 4rem;
+    /* margin: 0rem 4rem; */
     background-color: #373244;
 }
 
+.navbar, .home, .social-bar, .portfolio{
+    margin: 0rem 4rem;
+}
+
+
 .navbar{
-    display: flex;
     background-color: #373244;
+    display: flex;
     height: 60px;
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 .nav{
@@ -25,6 +30,7 @@ body{
     flex-direction: row;
     align-items: center;
 }
+
 
 .element{
     margin-left: 6rem;
@@ -70,12 +76,13 @@ a{
 }
 
 main{
-    margin-top: 60px;
+    margin-top: 70px;
 }
 
 .home{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .intro{
@@ -83,7 +90,7 @@ main{
 }
 
 h1{
-    font-size: 50px;
+    font-size: 55px;
     font-weight: bolder;
 }
 
@@ -127,7 +134,7 @@ h1{
     margin: 3rem 3rem 0rem;
 }
 
-.services a{
+.yellow{
     color: #efbe3f;
 }
 
@@ -143,6 +150,17 @@ h1{
 
 .services li{
     margin-right: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: #47465b;
+}
+
+.services img{
+    width: 25px;
 }
 
 .social-bar{
@@ -150,8 +168,9 @@ h1{
     align-items: center;
     justify-content: space-evenly;
     height: 80px;
-    width: 100%;
     background-color: #423d51;
+    position: relative;
+    top: -40px;
 }
 
 .social-bar img{
@@ -168,7 +187,64 @@ h1{
     border-radius: 2px;
 }
 
-.portfolio{
+.portfolio-container{
     background-color: #292534;
     width: 100%;
+    height: 100vh;
 }
+
+.portfolio{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.portfolio-intro{
+    height: 415px;
+    width: 415px;
+}
+
+.portfolio-services{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.portfolio-intro h2{
+    font-size: xx-large;
+}
+
+.portfolio-intro > *{
+    margin-bottom: 25px;
+}
+
+.info-4{
+    margin-right: 25px;
+}
+
+.info-1, .info-2{
+    margin-bottom: 25px;
+}
+
+.portfolio-services h3{
+    font-size: x-large;
+}
+
+.portfolio-list{
+    width: 500px;
+}
+
+.lists{
+    display: flex;
+    align-items: center;
+}
+
+.lists img{
+    margin: 20px 20px 20px 0px;
+    width: 125px;
+}
+
+.lists .arrow{
+    margin-left: 330px;
+}
+
